make client group editable
